<resources>
    <string name="app_name">Sai Baba Mantra</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>


    <string name="hello">Sai Baba Mantra</string>
    <string name="m1">Om Sai Namo Namah</string>
    <string name="m2">Shree Sai Namo Namah</string>
    <string name="m3">Jai Jai Sai Namo Namah</string>
    <string name="m4">Sadguru Sai Namo Namah</string>
<string name="description">Shirdi, a small rural town in the Rahata taluka of Ahmednagar district in the Maharashtra state of India. Shirdi is a secular place where all religions are treated as one and a belief in the power of Faith and Patience is foremost. A place where all heads bow down in prayer, where faith prevails, where hopes are built, where patience pays, and where infinite joy and everlasting contentment abound. Such is the glory of the place which belongs to the Holy Saint, a true repository of wisdom, who pleased all with pious equality and gifted mankind ornaments of humanity and peace by saying "SABKA MALIK EK". The footprints of Saibaba have made this town a holy place. Millions of devotees continuously flock here from all over India and abroad. Situated on the Ahmednagar-Manmad highway.</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="mantra11">ॐ सांईं नमो नमः
 </string>
    <string name="mantra12"> श्री सांईं नमो नमः</string>
    <string name="mantra13">जय जय सांईं नमो नमः</string>
    <string name="mantra14">सतगुरु सांईं नमो नमः</string>

    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="privacy_policy">                            ## Privacy Policy

HeartMeetSoul built the Sai Baba Mantra app as an Ad Supported app. This SERVICE is provided by HeartMeetSoul at no cost and is intended for use as is.

This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.

If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.

The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Sai Baba Mantra unless otherwise defined in this Privacy Policy.

**Information Collection and Use**

For a better experience, while using our Service, We may require you to provide us with certain personally identifiable information. The information that we request will be retained on your device and is not collected by us in any way.
The app does use third party services that may collect information used to identify you.

Link to privacy policy of third party service providers used by the app

*   [Google Play Services](https://www.google.com/policies/privacy/)
*   [AdMob](https://support.google.com/admob/answer/6128543?hl=en)

**Log Data**

We want to inform you that whenever you use our Service, in a case of an error in the app We collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.

**Cookies**

Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on internal memory of device.

This Service does not use these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.

**Service Providers**

We may employ third-party companies and individuals due to the following reasons:

*   To facilitate our Service;
*   To provide the Service on our behalf;
*   To perform Service-related services; or
*   To assist us in analyzing how our Service is used.

We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.

**Security**

We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and We cannot guarantee its absolute security.

**Links to Other Sites**

This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. we have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.

**Children’s Privacy**

These Services do not address anyone under the age of 13. we do not knowingly collect personally identifiable information from children under 13\. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.

**Changes to This Privacy Policy**

We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.

**Contact Us**

If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at heartmeetsoul.com.
</string>
    <string name="About_Us">Got an idea?  Come to us . We, at Softsolvate do our best to convert your ideas into beautiful websites and android apps. We are softsolvate get your ideas created here.  </string>
</resources>
