<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".SecondFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:textSize="15.0dip"
        android:typeface="serif"
        android:textColor="#7E3903"
        android:gravity="center"
        android:id="@+id/mantra11"
        android:layout_weight="1.5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4.0dip"
        android:text="@string/mantra11" />
    <TextView
        android:textSize="15.0dip"
        android:typeface="serif"
        android:textColor="#7E3903"
        android:gravity="center"
        android:id="@+id/mantra21"
        android:layout_weight="1.5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3.0dip"
        android:text="@string/mantra12"
        android:layout_below="@id/mantra11" />


    <TextView
        android:textSize="15.0dip"
        android:typeface="serif"
        android:textColor="#7E3903"
        android:gravity="center"
        android:id="@+id/mantra31"
        android:layout_weight="1.5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3.0dip"
        android:text="@string/mantra13"
        android:layout_below="@id/mantra21" />

    <TextView
        android:textSize="15.0dip"
        android:typeface="serif"
        android:textColor="#7E3903"
        android:gravity="center"
        android:id="@+id/mantra41"
        android:layout_weight="1.5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3.0dip"
        android:text="@string/mantra14"
        android:layout_below="@+id/mantra31" />


    <!--<TextView-->
        <!--android:id="@+id/textView4a"-->
        <!--android:background="#ff3c4143"-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="2.0dip"-->
        <!--android:layout_height="250.0dip"-->
        <!--android:layout_marginLeft="2.0dip"-->
        <!--android:layout_toRightOf="@id/mantra2" />-->

    <!--<TextView-->
        <!--android:textSize="14.0dip"-->
        <!--android:textColor="#ffffff00"-->
        <!--android:id="@+id/textView5a"-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="10.0dip"-->
        <!--android:layout_marginTop="20.0dip"-->
        <!--android:text="Count  = "-->
        <!--android:layout_toRightOf="@+id/textView4a" />-->
    <!--<TextView-->
        <!--android:textSize="14.0dip"-->
        <!--android:textColor="#ffffff00"-->
        <!--android:gravity="center"-->
        <!--android:id="@+id/textView6a"-->
        <!--android:paddingBottom="5.0dip"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="5.0dip"-->
        <!--android:text="0"-->
        <!--android:layout_below="@id/mantra4" />-->


    <!--<TextView-->
        <!--android:textSize="14.0dip"-->
        <!--android:textColor="#ffffff00"-->
        <!--android:gravity="center"-->
        <!--android:id="@+id/textView6b"-->
        <!--android:paddingBottom="5.0dip"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="30.0dip"-->
        <!--android:layout_marginTop="5.0dip"-->
        <!--android:text=""-->
        <!--android:layout_below="@+id/textView6a" />-->


    <!--<TextView-->
        <!--android:id="@+id/textView7a"-->
        <!--android:background="#ff3c4143"-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="200.0dip"-->
        <!--android:layout_height="1.0dip"-->
        <!--android:layout_marginTop="62.0dip"-->
        <!--android:layout_toRightOf="@+id/textView4a">-->

    <!--</TextView>-->

</LinearLayout>